--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="e.codexp.myapplication.MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btcadmentor"
         android:layout_width="378dp"
         android:layout_height="44dp"
         android:layout_marginBottom="8dp"
@@ -16,26 +16,26 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="cadastrar-se como mentor"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/btcadmentorado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btcadmentorado"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Cadastrar-se como mentorado"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/btconta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btconta"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="124dp"
@@ -57,6 +57,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/btconta"
         app:layout_constraintVertical_bias="0.056" />
 </android.support.constraint.ConstraintLayout>
