f Please enter the commit message for your changes. Lines starting situação atual do perfil

--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -27,27 +27,28 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Nome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgperfil"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtperfil"
-        android:layout_width="357dp"
+        android:layout_width="364dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textMultiLine"
+        android:hint="Sobre você"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgperfil" />
 
     <Spinner
         android:id="@+id/spngenero"
-        android:layout_width="358dp"
+        android:layout_width="362dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -65,13 +66,14 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
+        android:hint="cep"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnnascimento" />
 
     <Spinner
         android:id="@+id/spnsede"
-        android:layout_width="368dp"
+        android:layout_width="363dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -87,7 +89,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:onClick="confimarClicado"
+        android:text="CONFIRMAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnsede" />
