--- a/app/src/main/res/layout/activity_criar_mentoria.xml
+++ b/app/src/main/res/layout/activity_criar_mentoria.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="e.codexp.myapplication.CriarMentoria">
+    tools:context="e.codexp.myapplication.view.CriarMentoria">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
