--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="e.codexp.myapplication.SignUp"
+    tools:context="e.codexp.myapplication.view.SignUp"
     tools:layout_editor_absoluteY="81dp"
     tools:showIn="@layout/activity_sign_up">
 
