--- a/app/src/main/res/layout/activity_visualizar_mentoria.xml
+++ b/app/src/main/res/layout/activity_visualizar_mentoria.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvNomeCategoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -25,31 +25,31 @@
         app:layout_constraintTop_toBottomOf="@+id/tvNomeMentoria" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvOnline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Online"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNomeSede" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvPresencial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Presencial"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/tvOnline" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvNomeSede"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sede"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNomeCategoria" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btContinuar"
         android:layout_width="371dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -61,11 +61,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/mtFormulario"
         app:layout_constraintVertical_bias="0.007" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/mtFormulario"
         android:layout_width="372dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -75,14 +75,14 @@
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/tvFormulario" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/tvFormulario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Preencha o formulário com requisições para a mentoria"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/tvPresencial" />
 </android.support.constraint.ConstraintLayout>
