--- a/app/src/main/res/layout/activity_minhas_aplicacoes.xml
+++ b/app/src/main/res/layout/activity_minhas_aplicacoes.xml
@@ -2,14 +2,14 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/home_mentorado"
+    android:id="@+id/minhas_aplicacoes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_home_mentorado"
+        layout="@layout/content_rv_aplicacoes"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
