--- a/app/src/main/res/layout/aplicacao_item_lista.xml
+++ b/app/src/main/res/layout/aplicacao_item_lista.xml
@@ -10,12 +10,21 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tvNomeMentorado"
+        android:id="@+id/tvNomeMentoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nome"
         android:padding="8dp"
         android:textAlignment="center"
         android:textSize="25dp" />
+
+    <TextView
+        android:id="@+id/tvStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Categoria"
+        android:padding="4dp"
+        android:text="Status"
+        android:textAlignment="center" />
 
 </LinearLayout>
