--- a/app/src/main/res/layout/mentoria_item_lista.xml
+++ b/app/src/main/res/layout/mentoria_item_lista.xml
@@ -26,4 +26,12 @@
         android:padding="4dp"
         android:textAlignment="center" />
 
+    <TextView
+        android:id="@+id/tvStatusMentoria"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Categoria"
+        android:padding="4dp"
+        android:textAlignment="center" />
+
 </LinearLayout>
