--- a/app/src/main/res/layout/aplicacao_item_lista.xml
+++ b/app/src/main/res/layout/aplicacao_item_lista.xml
@@ -19,6 +19,15 @@
         android:textSize="25dp" />
 
     <TextView
+        android:id="@+id/tvNomeMentorado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Categoria"
+        android:padding="4dp"
+        android:text="Nome Mentorado"
+        android:textAlignment="center" />
+
+    <TextView
         android:id="@+id/tvStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
