--- a/app/src/main/res/layout/activity_visualizar_aplicacao.xml
+++ b/app/src/main/res/layout/activity_visualizar_aplicacao.xml
@@ -66,7 +66,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/etEditarNome"
+        android:id="@+id/etNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
