--- a/app/src/main/res/layout/activity_visualizar_perfil.xml
+++ b/app/src/main/res/layout/activity_visualizar_perfil.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="codexp.br.senai.sp.quick_mentoring_mobile.VisualizarPerfil">
+    tools:context="codexp.br.senai.sp.quick_mentoring_mobile.views.VisualizarPerfil">
 
     <EditText
-        android:id="@+id/etEditarNome"
+        android:id="@+id/etNome"
         android:layout_width="341dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
@@ -44,18 +44,18 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/spEditarSede"
+        app:layout_constraintBottom_toTopOf="@+id/spSede"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
-        android:id="@+id/spEditarSede"
+        android:id="@+id/spSede"
         android:layout_width="344dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btConfirmarEditarPerfil"
+        app:layout_constraintBottom_toTopOf="@+id/btSalvarPerfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -67,14 +67,14 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etEditarNome"
+        app:layout_constraintBottom_toTopOf="@+id/etNome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <Button
-        android:id="@+id/btConfirmarEditarPerfil"
+        android:id="@+id/btSalvarPerfil"
         android:layout_width="336dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="172dp"
