--- a/app/src/main/res/layout/activity_visualizar_perfil.xml
+++ b/app/src/main/res/layout/activity_visualizar_perfil.xml
@@ -10,7 +10,6 @@
         android:id="@+id/etNome"
         android:layout_width="341dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:ems="10"
@@ -18,6 +17,7 @@
         android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/etMiniBio"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -61,8 +61,8 @@
 
     <ImageView
         android:id="@+id/ivPerfil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="186dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -77,7 +77,7 @@
         android:id="@+id/btSalvarPerfil"
         android:layout_width="336dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="172dp"
+        android:layout_marginBottom="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Salvar"
